Fix vertical alignment of navbar

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -41,3 +41,7 @@ a.thumbnail {
 body {
   padding-bottom: 3em;
 }
+
+.navbar-nav {
+  margin-top: 10px;
+}
